# MIPT_4_sem

./: p1.cpp
Snake/: CMakeLists.txt  config.ini  info.txt  makefile
Snake/include/: config.h  console_view.h  controller.h  game_objects.h  model.h  sfml_view.h  view.h
Snake/src/: console_view.cpp  controller.cpp  main.cpp  model.cpp
Task 3/: color_test  main.cpp  makefile  model.cpp  model.h  sfml-app  t_view.h  view.cpp  view.h
Vladimirov/Cache/: hash_table.cpp
animals/: animal.c  animal.h  cat.c  cat.h  dog.c  dog.h  main.c  makefile  res
wc_g/: dict.c  dict.h  main.c  makefile  parser.c  parser.h  word_count
wct/: dict.c  dict.h  main.c  parser.c  parser.h  wc.c  wc2.c
